# FastFourierVisualizer

./: CMakeLists.txt  README.md  out.txt
src/: main.cpp  test.cpp
src/configuration/: CMakeLists.txt  cliargumentparser.cpp  cliargumentparser.h  cliarguments.h
src/configuration/tests/: CMakeLists.txt  cliargumentparsertest.cpp
src/datamodel/: CMakeLists.txt  signalamplitude.h  signalcapture.cpp  signalcapture.h  signalfouriertransform.h  timepoint.h
src/foundation/: stringcomparision.h
src/fouriertransform/: CMakeLists.txt  discretefouriertransform.h  fastfouriertransform.cpp  fastfouriertransform.h
src/fouriertransform/src/: CMakeLists.txt  discretefouriertransform.cpp  fastfouriertransform.cpp
src/graphvisualizer/: graphvisualizer.h  setupvisualizer.h
src/graphvisualizer/src/: CMakeLists.txt  graphvisualizer.cpp  igraphvisualizerimpl.h  matplotlibgraphvisualizer.cpp  matplotlibgraphvisualizer.h  setupvisualizer.cpp
src/signalcapturer/: CMakeLists.txt  isignalcapturer.h  signalcapturerfactory.h
src/signalcapturer/src/: CMakeLists.txt  signalcapturerdemo.cpp  signalcapturerdemo.h  signalcapturerfactory.cpp  signalcapturerstdin.h
